tests/ui/single-use-lifetime/lifetime-bounds.stderr
error: bounds cannot be used in this context
  --> $DIR/lifetime-bounds.rs:11:26
   |
LL | type FnPtr = for<'a, 'b: 'a> fn(Foo<'a>, Bar<'b>);
   |                          ^^

error: bounds cannot be used in this context
  --> $DIR/lifetime-bounds.rs:18:20
   |
LL |     T: for<'a, 'b: 'a> WhereBound<'a, 'b>,
   |                    ^^

error: aborting due to 2 previous errors

